    see BTS issue #205142).
  * Make sure upstream changelog file names are in lower case.
  * Disable patch: 006_remove-configure-files.patch, remove configure
    files from within /debian/rules.
  * Add patch: 019_nx-x11_expat-build-against-system-libxmltok.patch, fixes
    lintian error: embedded-library: expat. Build-depend on libxmltok1-dev.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 28 Dec 2011 19:06:26 +0100

nx-libs (2:3.5.0-0~x2go1) unstable; urgency=low

  * Initial release.
    - nxcomp (3.5.0-2)
    - nxcompext (3.5.0-1)
    - nxcompshad (3.5.0-2)
    - nx-X11 (3.5.0-2)
    - nxagent (3.5.0-5)
    - nxauth (3.5.0-1)
    - nxproxy (3.5.0-1)
  * Use NX adapted LD_LIBRARY_PATH in debian/rules.
  * Add quilt as build dependency.
  * Add main Makefile via patch: 001_add-main-makefile.patch.
  * Add patch: 002_nxcompshad-build-against-nx-x11-only.patch.
  * Add patch: 003_nxcompshad-gcc43.patch.
  * Add patch: 004_nx-x11-fix-nxcompshad-build.patch.
  * Add patch: 005_add-nxagent-wrapper.patch.
  * Fix for lintian issue: missing-build-dependency quilt (>= 0.46-7~).
  * Fix for lintian issue: extended-description-line-too-long (nxagent).
  * Disabling build of *-dbg packages for now...
  * Add patch: 006_remove-configure-files.patch.
  * Add patch: 007_nxcompshad-clean-gch-files.patch.
  * Remove unknown option --with from dh_auto_clean.
  * Add autoconf as build dependency.
  * Add patch: 008_add-nxproxy-wrapper.patch. Build nxproxy package.
  * Add patch: 009_nxproxy-add-man-page.patch.
  * Add nxproxy man page to nxproxy package.
  * Fix of nxproxy build in main Makefile (modifies
    001_add-main-makefile.patch).
  * Add patch: 010_nxauth-fix-binary-name-in-man-page.patch.
  * Add patch: 011_add-nxauth-wrapper.patch.
  * Build nxauth package.
  * Add lintian overrides for libxcomp*: breaks-without-version.
  * Add patches: 012, 013, 014 - Makefile uninstall stanza patches for
    nxcomp, nxcompext, nxcompshad.