@@ -53,6 +53,7 @@ nx-libs (2:3.5.0-0~x2go2) UNRELEASED; urgency=low
     files from within /debian/rules.
   * Add patch: 019_nx-x11_expat-build-against-system-libxmltok.patch, fixes
     lintian error: embedded-library: expat. Build-depend on libxmltok1-dev.
+  * Fix LD_LIBRARY_PATH export in wrapper scripts/patches.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 28 Dec 2011 19:06:26 +0100
 
